fixed problem of recommend playlist's covers

--- a/src/scss/recommend.scss
+++ b/src/scss/recommend.scss
@@ -44,20 +44,22 @@
     position: relative;
 
     display: flex;
+    flex-wrap: wrap;
 
     min-height: 103.2vw;
     padding-bottom: 24px;
-
-    flex-wrap: wrap;
   }
   .playlist {
     display: block;
 
     width: 33.33%;
+    padding-right: 1px;
     padding-bottom: 16px;
+    padding-left: 1px;
     .title {
       display: -webkit-box;
       overflow: hidden;
+      -webkit-box-orient: vertical;
 
       padding: 0px 2px 0 6px;
 
@@ -65,7 +67,6 @@
       line-height: 1.35;
 
       -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
     }
     img {
       width: 100%;
@@ -92,13 +93,12 @@
         right: 5px;
 
         display: flex;
+        align-items: center;
 
         color: #fff;
         text-shadow: 1px 0 0 rgba(0, 0, 0, .15);
 
         font-size: 12px;
-
-        align-items: center;
         .icon-erji {
           display: block;
 
@@ -109,16 +109,6 @@
           fill: white;
         }
       }
-    }
-    &:nth-child(3n+1) {
-      padding-right: 2px;
-    }
-    &:nth-child(3n) {
-      padding-left: 2px;
-    }
-    &:nth-child(3n-1) {
-      padding-right: 1px;
-      padding-left: 1px;
     }
   } // latest
   .latest .latest-list {
